parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DO

Grammar

Rule 0     S' -> program
Rule 1     program -> class_decl
Rule 2     program -> empty
Rule 3     class_decl -> class_decl class_decl
Rule 4     class_id -> ID
Rule 5     class_decl -> CLASS class_id EXTENDS ID { class_body_decl }
Rule 6     class_decl -> CLASS class_id { class_body_decl }
Rule 7     class_body_decl -> class_body_decl class_body_decl
Rule 8     class_body_decl -> field_decl
Rule 9     class_body_decl -> method_decl
Rule 10    class_body_decl -> constructor_decl
Rule 11    type -> INT
Rule 12    type -> FLOAT
Rule 13    type -> BOOLEAN
Rule 14    type -> ID
Rule 15    modifier -> PRIVATE STATIC
Rule 16    modifier -> PRIVATE
Rule 17    modifier -> PUBLIC STATIC
Rule 18    modifier -> PUBLIC
Rule 19    modifier -> STATIC
Rule 20    modifier -> empty
Rule 21    var_decl -> type variables ;
Rule 22    variables -> variable
Rule 23    variables -> variable , variables
Rule 24    variable -> ID
Rule 25    field_decl -> modifier var_decl
Rule 26    method_decl -> modifier type ID ( optional_formals ) block
Rule 27    method_decl -> modifier VOID ID ( optional_formals ) block
Rule 28    optional_formals -> formals
Rule 29    optional_formals -> empty
Rule 30    formals -> formal_param
Rule 31    formals -> formal_param , formals
Rule 32    formal_param -> type variable
Rule 33    constructor_decl -> modifier ID ( optional_formals ) block
Rule 34    block -> { optional_stmts }
Rule 35    optional_stmts -> stmt optional_stmts
Rule 36    optional_stmts -> empty
Rule 37    stmt -> IF ( expr ) stmt ELSE stmt
Rule 38    stmt -> IF ( expr ) stmt
Rule 39    stmt -> WHILE ( expr ) stmt
Rule 40    stmt -> FOR ( optional_stmt_expr ; optional_expr ; optional_stmt_expr ) stmt
Rule 41    stmt -> RETURN optional_expr ;
Rule 42    stmt -> stmt_expr ;
Rule 43    stmt -> BREAK ;
Rule 44    stmt -> CONTINUE ;
Rule 45    stmt -> block
Rule 46    stmt -> var_decl
Rule 47    stmt -> ;
Rule 48    optional_expr -> expr
Rule 49    optional_expr -> empty
Rule 50    optional_stmt_expr -> stmt_expr
Rule 51    optional_stmt_expr -> empty
Rule 52    literal -> INT_CONST
Rule 53    literal -> FLOAT_CONST
Rule 54    literal -> STRING_CONST
Rule 55    literal -> NULL
Rule 56    literal -> TRUE
Rule 57    literal -> FALSE
Rule 58    expr -> primary
Rule 59    expr -> assign
Rule 60    expr -> expr arith_op expr
Rule 61    expr -> expr bool_op expr
Rule 62    expr -> unary_op expr
Rule 63    field_access -> primary . ID
Rule 64    field_access -> ID
Rule 65    assign -> field_access ASSIGN expr
Rule 66    assign -> field_access INCREMENT
Rule 67    assign -> INCREMENT field_access
Rule 68    assign -> field_access DECREMENT
Rule 69    assign -> DECREMENT field_access
Rule 70    method_invocation -> field_access ( arguments )
Rule 71    method_invocation -> field_access ( )
Rule 72    arguments -> expr
Rule 73    arguments -> expr , arguments
Rule 74    primary -> literal
Rule 75    primary -> THIS
Rule 76    primary -> SUPER
Rule 77    primary -> ( expr )
Rule 78    primary -> NEW ID ( arguments )
Rule 79    primary -> NEW ID ( )
Rule 80    primary -> field_access
Rule 81    primary -> method_invocation
Rule 82    stmt_expr -> assign
Rule 83    stmt_expr -> method_invocation
Rule 84    arith_op -> PLUS
Rule 85    arith_op -> MINUS
Rule 86    arith_op -> TIMES
Rule 87    arith_op -> DIVIDE
Rule 88    bool_op -> AND
Rule 89    bool_op -> OR
Rule 90    bool_op -> EQUALITY
Rule 91    bool_op -> NOT_EQUAL
Rule 92    bool_op -> LESSER
Rule 93    bool_op -> GREATER
Rule 94    bool_op -> LESSER_EQ
Rule 95    bool_op -> GREATER_EQ
Rule 96    unary_op -> PLUS
Rule 97    unary_op -> MINUS
Rule 98    unary_op -> NOT
Rule 99    empty -> <empty>

Terminals, with rules where they appear

(                    : 26 27 33 37 38 39 40 70 71 77 78 79
)                    : 26 27 33 37 38 39 40 70 71 77 78 79
,                    : 23 31 73
.                    : 63
;                    : 21 40 40 41 42 43 44 47
AND                  : 88
ASSIGN               : 65
BOOLEAN              : 13
BREAK                : 43
CLASS                : 5 6
CONTINUE             : 44
DECREMENT            : 68 69
DIVIDE               : 87
DO                   : 
ELSE                 : 37
EQUALITY             : 90
EXTENDS              : 5
FALSE                : 57
FLOAT                : 12
FLOAT_CONST          : 53
FOR                  : 40
GREATER              : 93
GREATER_EQ           : 95
ID                   : 4 5 14 24 26 27 33 63 64 78 79
IF                   : 37 38
INCREMENT            : 66 67
INT                  : 11
INT_CONST            : 52
LESSER               : 92
LESSER_EQ            : 94
MINUS                : 85 97
NEW                  : 78 79
NOT                  : 98
NOT_EQUAL            : 91
NULL                 : 55
OR                   : 89
PLUS                 : 84 96
PRIVATE              : 15 16
PUBLIC               : 17 18
RETURN               : 41
STATIC               : 15 17 19
STRING_CONST         : 54
SUPER                : 76
THIS                 : 75
TIMES                : 86
TRUE                 : 56
VOID                 : 27
WHILE                : 39
error                : 
{                    : 5 6 34
}                    : 5 6 34

Nonterminals, with rules where they appear

arguments            : 70 73 78
arith_op             : 60
assign               : 59 82
block                : 26 27 33 45
bool_op              : 61
class_body_decl      : 5 6 7 7
class_decl           : 1 3 3
class_id             : 5 6
constructor_decl     : 10
empty                : 2 20 29 36 49 51
expr                 : 37 38 39 48 60 60 61 61 62 65 72 73 77
field_access         : 65 66 67 68 69 70 71 80
field_decl           : 8
formal_param         : 30 31
formals              : 28 31
literal              : 74
method_decl          : 9
method_invocation    : 81 83
modifier             : 25 26 27 33
optional_expr        : 40 41
optional_formals     : 26 27 33
optional_stmt_expr   : 40 40
optional_stmts       : 34 35
primary              : 58 63
program              : 0
stmt                 : 35 37 37 38 39 40
stmt_expr            : 42 50
type                 : 21 26 32
unary_op             : 62
var_decl             : 25 46
variable             : 22 23 32
variables            : 21 23

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . class_decl
    (2) program -> . empty
    (3) class_decl -> . class_decl class_decl
    (5) class_decl -> . CLASS class_id EXTENDS ID { class_body_decl }
    (6) class_decl -> . CLASS class_id { class_body_decl }
    (99) empty -> .

    CLASS           shift and go to state 4
    $end            reduce using rule 99 (empty -> .)

    program                        shift and go to state 1
    class_decl                     shift and go to state 2
    empty                          shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> class_decl .
    (3) class_decl -> class_decl . class_decl
    (3) class_decl -> . class_decl class_decl
    (5) class_decl -> . CLASS class_id EXTENDS ID { class_body_decl }
    (6) class_decl -> . CLASS class_id { class_body_decl }

    $end            reduce using rule 1 (program -> class_decl .)
    CLASS           shift and go to state 4

    class_decl                     shift and go to state 5

state 3

    (2) program -> empty .

    $end            reduce using rule 2 (program -> empty .)


state 4

    (5) class_decl -> CLASS . class_id EXTENDS ID { class_body_decl }
    (6) class_decl -> CLASS . class_id { class_body_decl }
    (4) class_id -> . ID

    ID              shift and go to state 7

    class_id                       shift and go to state 6

state 5

    (3) class_decl -> class_decl class_decl .
    (3) class_decl -> class_decl . class_decl
    (3) class_decl -> . class_decl class_decl
    (5) class_decl -> . CLASS class_id EXTENDS ID { class_body_decl }
    (6) class_decl -> . CLASS class_id { class_body_decl }

  ! shift/reduce conflict for CLASS resolved as shift
    $end            reduce using rule 3 (class_decl -> class_decl class_decl .)
    CLASS           shift and go to state 4

  ! CLASS           [ reduce using rule 3 (class_decl -> class_decl class_decl .) ]

    class_decl                     shift and go to state 5

state 6

    (5) class_decl -> CLASS class_id . EXTENDS ID { class_body_decl }
    (6) class_decl -> CLASS class_id . { class_body_decl }

    EXTENDS         shift and go to state 8
    {               shift and go to state 9


state 7

    (4) class_id -> ID .

    EXTENDS         reduce using rule 4 (class_id -> ID .)
    {               reduce using rule 4 (class_id -> ID .)


state 8

    (5) class_decl -> CLASS class_id EXTENDS . ID { class_body_decl }

    ID              shift and go to state 10


state 9

    (6) class_decl -> CLASS class_id { . class_body_decl }
    (7) class_body_decl -> . class_body_decl class_body_decl
    (8) class_body_decl -> . field_decl
    (9) class_body_decl -> . method_decl
    (10) class_body_decl -> . constructor_decl
    (25) field_decl -> . modifier var_decl
    (26) method_decl -> . modifier type ID ( optional_formals ) block
    (27) method_decl -> . modifier VOID ID ( optional_formals ) block
    (33) constructor_decl -> . modifier ID ( optional_formals ) block
    (15) modifier -> . PRIVATE STATIC
    (16) modifier -> . PRIVATE
    (17) modifier -> . PUBLIC STATIC
    (18) modifier -> . PUBLIC
    (19) modifier -> . STATIC
    (20) modifier -> . empty
    (99) empty -> .

    PRIVATE         shift and go to state 16
    PUBLIC          shift and go to state 18
    STATIC          shift and go to state 17
    VOID            reduce using rule 99 (empty -> .)
    ID              reduce using rule 99 (empty -> .)
    INT             reduce using rule 99 (empty -> .)
    FLOAT           reduce using rule 99 (empty -> .)
    BOOLEAN         reduce using rule 99 (empty -> .)

    class_body_decl                shift and go to state 11
    field_decl                     shift and go to state 12
    method_decl                    shift and go to state 13
    constructor_decl               shift and go to state 14
    modifier                       shift and go to state 15
    empty                          shift and go to state 19

state 10

    (5) class_decl -> CLASS class_id EXTENDS ID . { class_body_decl }

    {               shift and go to state 20


state 11

    (6) class_decl -> CLASS class_id { class_body_decl . }
    (7) class_body_decl -> class_body_decl . class_body_decl
    (7) class_body_decl -> . class_body_decl class_body_decl
    (8) class_body_decl -> . field_decl
    (9) class_body_decl -> . method_decl
    (10) class_body_decl -> . constructor_decl
    (25) field_decl -> . modifier var_decl
    (26) method_decl -> . modifier type ID ( optional_formals ) block
    (27) method_decl -> . modifier VOID ID ( optional_formals ) block
    (33) constructor_decl -> . modifier ID ( optional_formals ) block
    (15) modifier -> . PRIVATE STATIC
    (16) modifier -> . PRIVATE
    (17) modifier -> . PUBLIC STATIC
    (18) modifier -> . PUBLIC
    (19) modifier -> . STATIC
    (20) modifier -> . empty
    (99) empty -> .

    }               shift and go to state 22
    PRIVATE         shift and go to state 16
    PUBLIC          shift and go to state 18
    STATIC          shift and go to state 17
    VOID            reduce using rule 99 (empty -> .)
    ID              reduce using rule 99 (empty -> .)
    INT             reduce using rule 99 (empty -> .)
    FLOAT           reduce using rule 99 (empty -> .)
    BOOLEAN         reduce using rule 99 (empty -> .)

    class_body_decl                shift and go to state 21
    field_decl                     shift and go to state 12
    method_decl                    shift and go to state 13
    constructor_decl               shift and go to state 14
    modifier                       shift and go to state 15
    empty                          shift and go to state 19

state 12

    (8) class_body_decl -> field_decl .

    }               reduce using rule 8 (class_body_decl -> field_decl .)
    PRIVATE         reduce using rule 8 (class_body_decl -> field_decl .)
    PUBLIC          reduce using rule 8 (class_body_decl -> field_decl .)
    STATIC          reduce using rule 8 (class_body_decl -> field_decl .)
    VOID            reduce using rule 8 (class_body_decl -> field_decl .)
    ID              reduce using rule 8 (class_body_decl -> field_decl .)
    INT             reduce using rule 8 (class_body_decl -> field_decl .)
    FLOAT           reduce using rule 8 (class_body_decl -> field_decl .)
    BOOLEAN         reduce using rule 8 (class_body_decl -> field_decl .)


state 13

    (9) class_body_decl -> method_decl .

    }               reduce using rule 9 (class_body_decl -> method_decl .)
    PRIVATE         reduce using rule 9 (class_body_decl -> method_decl .)
    PUBLIC          reduce using rule 9 (class_body_decl -> method_decl .)
    STATIC          reduce using rule 9 (class_body_decl -> method_decl .)
    VOID            reduce using rule 9 (class_body_decl -> method_decl .)
    ID              reduce using rule 9 (class_body_decl -> method_decl .)
    INT             reduce using rule 9 (class_body_decl -> method_decl .)
    FLOAT           reduce using rule 9 (class_body_decl -> method_decl .)
    BOOLEAN         reduce using rule 9 (class_body_decl -> method_decl .)


state 14

    (10) class_body_decl -> constructor_decl .

    }               reduce using rule 10 (class_body_decl -> constructor_decl .)
    PRIVATE         reduce using rule 10 (class_body_decl -> constructor_decl .)
    PUBLIC          reduce using rule 10 (class_body_decl -> constructor_decl .)
    STATIC          reduce using rule 10 (class_body_decl -> constructor_decl .)
    VOID            reduce using rule 10 (class_body_decl -> constructor_decl .)
    ID              reduce using rule 10 (class_body_decl -> constructor_decl .)
    INT             reduce using rule 10 (class_body_decl -> constructor_decl .)
    FLOAT           reduce using rule 10 (class_body_decl -> constructor_decl .)
    BOOLEAN         reduce using rule 10 (class_body_decl -> constructor_decl .)


state 15

    (25) field_decl -> modifier . var_decl
    (26) method_decl -> modifier . type ID ( optional_formals ) block
    (27) method_decl -> modifier . VOID ID ( optional_formals ) block
    (33) constructor_decl -> modifier . ID ( optional_formals ) block
    (21) var_decl -> . type variables ;
    (11) type -> . INT
    (12) type -> . FLOAT
    (13) type -> . BOOLEAN
    (14) type -> . ID

    VOID            shift and go to state 26
    ID              shift and go to state 25
    INT             shift and go to state 27
    FLOAT           shift and go to state 28
    BOOLEAN         shift and go to state 29

    var_decl                       shift and go to state 23
    type                           shift and go to state 24

state 16

    (15) modifier -> PRIVATE . STATIC
    (16) modifier -> PRIVATE .

    STATIC          shift and go to state 30
    VOID            reduce using rule 16 (modifier -> PRIVATE .)
    ID              reduce using rule 16 (modifier -> PRIVATE .)
    INT             reduce using rule 16 (modifier -> PRIVATE .)
    FLOAT           reduce using rule 16 (modifier -> PRIVATE .)
    BOOLEAN         reduce using rule 16 (modifier -> PRIVATE .)


state 17

    (19) modifier -> STATIC .

    VOID            reduce using rule 19 (modifier -> STATIC .)
    ID              reduce using rule 19 (modifier -> STATIC .)
    INT             reduce using rule 19 (modifier -> STATIC .)
    FLOAT           reduce using rule 19 (modifier -> STATIC .)
    BOOLEAN         reduce using rule 19 (modifier -> STATIC .)


state 18

    (17) modifier -> PUBLIC . STATIC
    (18) modifier -> PUBLIC .

    STATIC          shift and go to state 31
    VOID            reduce using rule 18 (modifier -> PUBLIC .)
    ID              reduce using rule 18 (modifier -> PUBLIC .)
    INT             reduce using rule 18 (modifier -> PUBLIC .)
    FLOAT           reduce using rule 18 (modifier -> PUBLIC .)
    BOOLEAN         reduce using rule 18 (modifier -> PUBLIC .)


state 19

    (20) modifier -> empty .

    VOID            reduce using rule 20 (modifier -> empty .)
    ID              reduce using rule 20 (modifier -> empty .)
    INT             reduce using rule 20 (modifier -> empty .)
    FLOAT           reduce using rule 20 (modifier -> empty .)
    BOOLEAN         reduce using rule 20 (modifier -> empty .)


state 20

    (5) class_decl -> CLASS class_id EXTENDS ID { . class_body_decl }
    (7) class_body_decl -> . class_body_decl class_body_decl
    (8) class_body_decl -> . field_decl
    (9) class_body_decl -> . method_decl
    (10) class_body_decl -> . constructor_decl
    (25) field_decl -> . modifier var_decl
    (26) method_decl -> . modifier type ID ( optional_formals ) block
    (27) method_decl -> . modifier VOID ID ( optional_formals ) block
    (33) constructor_decl -> . modifier ID ( optional_formals ) block
    (15) modifier -> . PRIVATE STATIC
    (16) modifier -> . PRIVATE
    (17) modifier -> . PUBLIC STATIC
    (18) modifier -> . PUBLIC
    (19) modifier -> . STATIC
    (20) modifier -> . empty
    (99) empty -> .

    PRIVATE         shift and go to state 16
    PUBLIC          shift and go to state 18
    STATIC          shift and go to state 17
    VOID            reduce using rule 99 (empty -> .)
    ID              reduce using rule 99 (empty -> .)
    INT             reduce using rule 99 (empty -> .)
    FLOAT           reduce using rule 99 (empty -> .)
    BOOLEAN         reduce using rule 99 (empty -> .)

    class_body_decl                shift and go to state 32
    field_decl                     shift and go to state 12
    method_decl                    shift and go to state 13
    constructor_decl               shift and go to state 14
    modifier                       shift and go to state 15
    empty                          shift and go to state 19

state 21

    (7) class_body_decl -> class_body_decl class_body_decl .
    (7) class_body_decl -> class_body_decl . class_body_decl
    (7) class_body_decl -> . class_body_decl class_body_decl
    (8) class_body_decl -> . field_decl
    (9) class_body_decl -> . method_decl
    (10) class_body_decl -> . constructor_decl
    (25) field_decl -> . modifier var_decl
    (26) method_decl -> . modifier type ID ( optional_formals ) block
    (27) method_decl -> . modifier VOID ID ( optional_formals ) block
    (33) constructor_decl -> . modifier ID ( optional_formals ) block
    (15) modifier -> . PRIVATE STATIC
    (16) modifier -> . PRIVATE
    (17) modifier -> . PUBLIC STATIC
    (18) modifier -> . PUBLIC
    (19) modifier -> . STATIC
    (20) modifier -> . empty
    (99) empty -> .

  ! shift/reduce conflict for PRIVATE resolved as shift
  ! shift/reduce conflict for PUBLIC resolved as shift
  ! shift/reduce conflict for STATIC resolved as shift
  ! reduce/reduce conflict for VOID resolved using rule 7 (class_body_decl -> class_body_decl class_body_decl .)
  ! reduce/reduce conflict for ID resolved using rule 7 (class_body_decl -> class_body_decl class_body_decl .)
  ! reduce/reduce conflict for INT resolved using rule 7 (class_body_decl -> class_body_decl class_body_decl .)
  ! reduce/reduce conflict for FLOAT resolved using rule 7 (class_body_decl -> class_body_decl class_body_decl .)
  ! reduce/reduce conflict for BOOLEAN resolved using rule 7 (class_body_decl -> class_body_decl class_body_decl .)
    }               reduce using rule 7 (class_body_decl -> class_body_decl class_body_decl .)
    VOID            reduce using rule 7 (class_body_decl -> class_body_decl class_body_decl .)
    ID              reduce using rule 7 (class_body_decl -> class_body_decl class_body_decl .)
    INT             reduce using rule 7 (class_body_decl -> class_body_decl class_body_decl .)
    FLOAT           reduce using rule 7 (class_body_decl -> class_body_decl class_body_decl .)
    BOOLEAN         reduce using rule 7 (class_body_decl -> class_body_decl class_body_decl .)
    PRIVATE         shift and go to state 16
    PUBLIC          shift and go to state 18
    STATIC          shift and go to state 17

  ! PRIVATE         [ reduce using rule 7 (class_body_decl -> class_body_decl class_body_decl .) ]
  ! PUBLIC          [ reduce using rule 7 (class_body_decl -> class_body_decl class_body_decl .) ]
  ! STATIC          [ reduce using rule 7 (class_body_decl -> class_body_decl class_body_decl .) ]
  ! VOID            [ reduce using rule 99 (empty -> .) ]
  ! ID              [ reduce using rule 99 (empty -> .) ]
  ! INT             [ reduce using rule 99 (empty -> .) ]
  ! FLOAT           [ reduce using rule 99 (empty -> .) ]
  ! BOOLEAN         [ reduce using rule 99 (empty -> .) ]

    class_body_decl                shift and go to state 21
    field_decl                     shift and go to state 12
    method_decl                    shift and go to state 13
    constructor_decl               shift and go to state 14
    modifier                       shift and go to state 15
    empty                          shift and go to state 19

state 22

    (6) class_decl -> CLASS class_id { class_body_decl } .

    CLASS           reduce using rule 6 (class_decl -> CLASS class_id { class_body_decl } .)
    $end            reduce using rule 6 (class_decl -> CLASS class_id { class_body_decl } .)


state 23

    (25) field_decl -> modifier var_decl .

    }               reduce using rule 25 (field_decl -> modifier var_decl .)
    PRIVATE         reduce using rule 25 (field_decl -> modifier var_decl .)
    PUBLIC          reduce using rule 25 (field_decl -> modifier var_decl .)
    STATIC          reduce using rule 25 (field_decl -> modifier var_decl .)
    VOID            reduce using rule 25 (field_decl -> modifier var_decl .)
    ID              reduce using rule 25 (field_decl -> modifier var_decl .)
    INT             reduce using rule 25 (field_decl -> modifier var_decl .)
    FLOAT           reduce using rule 25 (field_decl -> modifier var_decl .)
    BOOLEAN         reduce using rule 25 (field_decl -> modifier var_decl .)


state 24

    (26) method_decl -> modifier type . ID ( optional_formals ) block
    (21) var_decl -> type . variables ;
    (22) variables -> . variable
    (23) variables -> . variable , variables
    (24) variable -> . ID

    ID              shift and go to state 33

    variables                      shift and go to state 34
    variable                       shift and go to state 35

state 25

    (33) constructor_decl -> modifier ID . ( optional_formals ) block
    (14) type -> ID .

    (               shift and go to state 36
    ID              reduce using rule 14 (type -> ID .)


state 26

    (27) method_decl -> modifier VOID . ID ( optional_formals ) block

    ID              shift and go to state 37


state 27

    (11) type -> INT .

    ID              reduce using rule 11 (type -> INT .)


state 28

    (12) type -> FLOAT .

    ID              reduce using rule 12 (type -> FLOAT .)


state 29

    (13) type -> BOOLEAN .

    ID              reduce using rule 13 (type -> BOOLEAN .)


state 30

    (15) modifier -> PRIVATE STATIC .

    VOID            reduce using rule 15 (modifier -> PRIVATE STATIC .)
    ID              reduce using rule 15 (modifier -> PRIVATE STATIC .)
    INT             reduce using rule 15 (modifier -> PRIVATE STATIC .)
    FLOAT           reduce using rule 15 (modifier -> PRIVATE STATIC .)
    BOOLEAN         reduce using rule 15 (modifier -> PRIVATE STATIC .)


state 31

    (17) modifier -> PUBLIC STATIC .

    VOID            reduce using rule 17 (modifier -> PUBLIC STATIC .)
    ID              reduce using rule 17 (modifier -> PUBLIC STATIC .)
    INT             reduce using rule 17 (modifier -> PUBLIC STATIC .)
    FLOAT           reduce using rule 17 (modifier -> PUBLIC STATIC .)
    BOOLEAN         reduce using rule 17 (modifier -> PUBLIC STATIC .)


state 32

    (5) class_decl -> CLASS class_id EXTENDS ID { class_body_decl . }
    (7) class_body_decl -> class_body_decl . class_body_decl
    (7) class_body_decl -> . class_body_decl class_body_decl
    (8) class_body_decl -> . field_decl
    (9) class_body_decl -> . method_decl
    (10) class_body_decl -> . constructor_decl
    (25) field_decl -> . modifier var_decl
    (26) method_decl -> . modifier type ID ( optional_formals ) block
    (27) method_decl -> . modifier VOID ID ( optional_formals ) block
    (33) constructor_decl -> . modifier ID ( optional_formals ) block
    (15) modifier -> . PRIVATE STATIC
    (16) modifier -> . PRIVATE
    (17) modifier -> . PUBLIC STATIC
    (18) modifier -> . PUBLIC
    (19) modifier -> . STATIC
    (20) modifier -> . empty
    (99) empty -> .

    }               shift and go to state 38
    PRIVATE         shift and go to state 16
    PUBLIC          shift and go to state 18
    STATIC          shift and go to state 17
    VOID            reduce using rule 99 (empty -> .)
    ID              reduce using rule 99 (empty -> .)
    INT             reduce using rule 99 (empty -> .)
    FLOAT           reduce using rule 99 (empty -> .)
    BOOLEAN         reduce using rule 99 (empty -> .)

    class_body_decl                shift and go to state 21
    field_decl                     shift and go to state 12
    method_decl                    shift and go to state 13
    constructor_decl               shift and go to state 14
    modifier                       shift and go to state 15
    empty                          shift and go to state 19

state 33

    (26) method_decl -> modifier type ID . ( optional_formals ) block
    (24) variable -> ID .

    (               shift and go to state 39
    ,               reduce using rule 24 (variable -> ID .)
    ;               reduce using rule 24 (variable -> ID .)


state 34

    (21) var_decl -> type variables . ;

    ;               shift and go to state 40


state 35

    (22) variables -> variable .
    (23) variables -> variable . , variables

    ;               reduce using rule 22 (variables -> variable .)
    ,               shift and go to state 41


state 36

    (33) constructor_decl -> modifier ID ( . optional_formals ) block
    (28) optional_formals -> . formals
    (29) optional_formals -> . empty
    (30) formals -> . formal_param
    (31) formals -> . formal_param , formals
    (99) empty -> .
    (32) formal_param -> . type variable
    (11) type -> . INT
    (12) type -> . FLOAT
    (13) type -> . BOOLEAN
    (14) type -> . ID

    )               reduce using rule 99 (empty -> .)
    INT             shift and go to state 27
    FLOAT           shift and go to state 28
    BOOLEAN         shift and go to state 29
    ID              shift and go to state 42

    optional_formals               shift and go to state 43
    formals                        shift and go to state 44
    empty                          shift and go to state 45
    formal_param                   shift and go to state 46
    type                           shift and go to state 47

state 37

    (27) method_decl -> modifier VOID ID . ( optional_formals ) block

    (               shift and go to state 48


state 38

    (5) class_decl -> CLASS class_id EXTENDS ID { class_body_decl } .

    CLASS           reduce using rule 5 (class_decl -> CLASS class_id EXTENDS ID { class_body_decl } .)
    $end            reduce using rule 5 (class_decl -> CLASS class_id EXTENDS ID { class_body_decl } .)


state 39

    (26) method_decl -> modifier type ID ( . optional_formals ) block
    (28) optional_formals -> . formals
    (29) optional_formals -> . empty
    (30) formals -> . formal_param
    (31) formals -> . formal_param , formals
    (99) empty -> .
    (32) formal_param -> . type variable
    (11) type -> . INT
    (12) type -> . FLOAT
    (13) type -> . BOOLEAN
    (14) type -> . ID

    )               reduce using rule 99 (empty -> .)
    INT             shift and go to state 27
    FLOAT           shift and go to state 28
    BOOLEAN         shift and go to state 29
    ID              shift and go to state 42

    type                           shift and go to state 47
    optional_formals               shift and go to state 49
    formals                        shift and go to state 44
    empty                          shift and go to state 45
    formal_param                   shift and go to state 46

state 40

    (21) var_decl -> type variables ; .

    }               reduce using rule 21 (var_decl -> type variables ; .)
    PRIVATE         reduce using rule 21 (var_decl -> type variables ; .)
    PUBLIC          reduce using rule 21 (var_decl -> type variables ; .)
    STATIC          reduce using rule 21 (var_decl -> type variables ; .)
    VOID            reduce using rule 21 (var_decl -> type variables ; .)
    ID              reduce using rule 21 (var_decl -> type variables ; .)
    INT             reduce using rule 21 (var_decl -> type variables ; .)
    FLOAT           reduce using rule 21 (var_decl -> type variables ; .)
    BOOLEAN         reduce using rule 21 (var_decl -> type variables ; .)
    IF              reduce using rule 21 (var_decl -> type variables ; .)
    WHILE           reduce using rule 21 (var_decl -> type variables ; .)
    FOR             reduce using rule 21 (var_decl -> type variables ; .)
    RETURN          reduce using rule 21 (var_decl -> type variables ; .)
    BREAK           reduce using rule 21 (var_decl -> type variables ; .)
    CONTINUE        reduce using rule 21 (var_decl -> type variables ; .)
    ;               reduce using rule 21 (var_decl -> type variables ; .)
    {               reduce using rule 21 (var_decl -> type variables ; .)
    INCREMENT       reduce using rule 21 (var_decl -> type variables ; .)
    DECREMENT       reduce using rule 21 (var_decl -> type variables ; .)
    THIS            reduce using rule 21 (var_decl -> type variables ; .)
    SUPER           reduce using rule 21 (var_decl -> type variables ; .)
    (               reduce using rule 21 (var_decl -> type variables ; .)
    NEW             reduce using rule 21 (var_decl -> type variables ; .)
    INT_CONST       reduce using rule 21 (var_decl -> type variables ; .)
    FLOAT_CONST     reduce using rule 21 (var_decl -> type variables ; .)
    STRING_CONST    reduce using rule 21 (var_decl -> type variables ; .)
    NULL            reduce using rule 21 (var_decl -> type variables ; .)
    TRUE            reduce using rule 21 (var_decl -> type variables ; .)
    FALSE           reduce using rule 21 (var_decl -> type variables ; .)
    ELSE            reduce using rule 21 (var_decl -> type variables ; .)


state 41

    (23) variables -> variable , . variables
    (22) variables -> . variable
    (23) variables -> . variable , variables
    (24) variable -> . ID

    ID              shift and go to state 51

    variable                       shift and go to state 35
    variables                      shift and go to state 50

state 42

    (14) type -> ID .

    ID              reduce using rule 14 (type -> ID .)


state 43

    (33) constructor_decl -> modifier ID ( optional_formals . ) block

    )               shift and go to state 52


state 44

    (28) optional_formals -> formals .

    )               reduce using rule 28 (optional_formals -> formals .)


state 45

    (29) optional_formals -> empty .

    )               reduce using rule 29 (optional_formals -> empty .)


state 46

    (30) formals -> formal_param .
    (31) formals -> formal_param . , formals

    )               reduce using rule 30 (formals -> formal_param .)
    ,               shift and go to state 53


state 47

    (32) formal_param -> type . variable
    (24) variable -> . ID

    ID              shift and go to state 51

    variable                       shift and go to state 54

state 48

    (27) method_decl -> modifier VOID ID ( . optional_formals ) block
    (28) optional_formals -> . formals
    (29) optional_formals -> . empty
    (30) formals -> . formal_param
    (31) formals -> . formal_param , formals
    (99) empty -> .
    (32) formal_param -> . type variable
    (11) type -> . INT
    (12) type -> . FLOAT
    (13) type -> . BOOLEAN
    (14) type -> . ID

    )               reduce using rule 99 (empty -> .)
    INT             shift and go to state 27
    FLOAT           shift and go to state 28
    BOOLEAN         shift and go to state 29
    ID              shift and go to state 42

    optional_formals               shift and go to state 55
    formals                        shift and go to state 44
    empty                          shift and go to state 45
    formal_param                   shift and go to state 46
    type                           shift and go to state 47

state 49

    (26) method_decl -> modifier type ID ( optional_formals . ) block

    )               shift and go to state 56


state 50

    (23) variables -> variable , variables .

    ;               reduce using rule 23 (variables -> variable , variables .)


state 51

    (24) variable -> ID .

    ,               reduce using rule 24 (variable -> ID .)
    ;               reduce using rule 24 (variable -> ID .)
    )               reduce using rule 24 (variable -> ID .)


state 52

    (33) constructor_decl -> modifier ID ( optional_formals ) . block
    (34) block -> . { optional_stmts }

    {               shift and go to state 58

    block                          shift and go to state 57

state 53

    (31) formals -> formal_param , . formals
    (30) formals -> . formal_param
    (31) formals -> . formal_param , formals
    (32) formal_param -> . type variable
    (11) type -> . INT
    (12) type -> . FLOAT
    (13) type -> . BOOLEAN
    (14) type -> . ID

    INT             shift and go to state 27
    FLOAT           shift and go to state 28
    BOOLEAN         shift and go to state 29
    ID              shift and go to state 42

    formal_param                   shift and go to state 46
    formals                        shift and go to state 59
    type                           shift and go to state 47

state 54

    (32) formal_param -> type variable .

    ,               reduce using rule 32 (formal_param -> type variable .)
    )               reduce using rule 32 (formal_param -> type variable .)


state 55

    (27) method_decl -> modifier VOID ID ( optional_formals . ) block

    )               shift and go to state 60


state 56

    (26) method_decl -> modifier type ID ( optional_formals ) . block
    (34) block -> . { optional_stmts }

    {               shift and go to state 58

    block                          shift and go to state 61

state 57

    (33) constructor_decl -> modifier ID ( optional_formals ) block .

    }               reduce using rule 33 (constructor_decl -> modifier ID ( optional_formals ) block .)
    PRIVATE         reduce using rule 33 (constructor_decl -> modifier ID ( optional_formals ) block .)
    PUBLIC          reduce using rule 33 (constructor_decl -> modifier ID ( optional_formals ) block .)
    STATIC          reduce using rule 33 (constructor_decl -> modifier ID ( optional_formals ) block .)
    VOID            reduce using rule 33 (constructor_decl -> modifier ID ( optional_formals ) block .)
    ID              reduce using rule 33 (constructor_decl -> modifier ID ( optional_formals ) block .)
    INT             reduce using rule 33 (constructor_decl -> modifier ID ( optional_formals ) block .)
    FLOAT           reduce using rule 33 (constructor_decl -> modifier ID ( optional_formals ) block .)
    BOOLEAN         reduce using rule 33 (constructor_decl -> modifier ID ( optional_formals ) block .)


state 58
